--- a/src/app/truth/truth.component.scss
+++ b/src/app/truth/truth.component.scss
@@ -36,24 +36,14 @@
 
 .truth-body {
     float: left;
+    display: flex;
     width: calc(100% - 50px);
     min-height: 200px;
     height: calc( 100% );
+    max-height: calc( 100% );
     font-size: 12px;
     color: $text-color;
-    padding-top: 10px;
-    overflow-y: auto;
 }
-
-.truth-error {
-    float: left;
-    width: 100%;
-    height: 50px;
-    font-size: 14px;
-    color: $text-danger;
-    font-weight: bold;
-}
-
 
 .truth-table-header {
     float: left;
@@ -71,4 +61,12 @@
     color: $text-color;
     outline: none;
     text-align: center;
+}
+
+.truth-final-method-name {
+    color: $version-color;
+}
+
+.truth-final-result-text {
+    color: $text-live;
 }
