--- a/src/app/truth/truth.table/truth.table.component.scss
+++ b/src/app/truth/truth.table/truth.table.component.scss
@@ -1,125 +1,103 @@
 @import "../truth.component.scss";
 
-
-.truth-variables {
+.truth-table {
     float: left;
-    height: auto;
-    width: 52px;
-}
-.truth-expression {
-    float: left;
-    height: auto;
     width: auto;
-    padding-left: 20px;
-    margin-top: -25px;
+    height: calc(100% - 20px);
+    max-height: calc(100% - 20px);
+    overflow-y: auto;
+    overflow-x: hidden;
+    padding-right: 10px;
 }
 
-.truth-variables-names {
-    float: left;
-    height: 50px;
-    width: auto;
-    margin-top: 30px;
-}
-.truth-variable-name {
-    float: left;
-    height: 50px;
-    width: 50px;
+.truth-table-header {
     position: fixed;
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    line-height: 50px;
-    border-bottom: 1px solid $border-color;
-    border-right: 1px solid $border-color;
-    color: $truth-table-text-color;
-    background: $truth-table-background-color;
-    margin-top: -40px;
+    width: auto;
+    height: 53px;
 }
-.truth-variable-name > span {
-    color: $text-color;
-}
-.truth-variables-values {
-    float: left;
+.truth-table-body {
+    width: auto;
     height: auto;
+    padding-top:50px;
+}
+.truth-table-values {
+    float: left;
+    width: 51px;
+    height: auto;
+}
+.truth-table-value {
+    float: left;
     width: 50px;
-    margin-top: 40px;
-}
-.truth-variable-value {
-    float: left;
-    height: auto;
-    width: 50px;
-    text-align: center;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 50px;
-    border-right: 1px solid $border-color;
-    border-bottom: 1px solid $border-color;
-    color: $text-color;
-}
-
-.truth-variable-result-value {
-    float: left;
-    height: auto;
-    width: 150px;
-    text-align: center;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 50px;
-    color: $text-color;
-}
-.truth-variable-result-value-line {
-    border-right: 1px solid $border-color;
-    border-bottom: 1px solid $border-color;
-    float: left;
     height: 50px;
-    width: 50px;
 }
-
-.truth-variable-result-value-line-expression {
+.truth-table-value-line {
     float: left;
-    margin-left: 10px;
+    width: 50px;
+    height: 50px;
+    color: $text-color;
+    border-right: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+    text-align: center;
+    line-height: 50px;
+}
+.truth-table-value-line-expression {
+    float: left;
+    text-align: left;
+    font-size: 11px;
+    width: auto;
+    min-height: 50px;
+    color: $text-color;
+    padding-left: 5px;
+    line-height: 50px;
 }
 
-.truth-variable-result-value-line-expression > .fa {
+.truth-table-value-line-expression > span {
     color: $text-live;
 }
 
-.truth-variable-add {
+.truth-table-header-variable-name {
     float: left;
-    height: auto;
-    width: auto;
-    text-align: center;
-    font-size: 14px;
-    font-weight: normal;
+    background: $truth-table-background-color;
+    width: 50px;
+    height: 50px;
     line-height: 50px;
+    font-size: 14px;
     color: $text-color;
-    margin-left: 5px;
-    margin-top: -10px;
-}
-.truth-input-active {
-    width:50px;
+    border-right: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+    text-align: center;
 }
 
-.truth-table-add {
+.truth-option {
     float: left;
-    position: relative;
-    width: 120px;
+    width: auto;
     height: 50px;
     padding-left: 10px;
 }
-.add-button {
+
+.truth-add-input {
     float: left;
     width: 50px;
     height: 50px;
-    text-align: center;
-    line-height: 50px;
     border: 1px dashed $border-color;
-    color: $text-color-alive;
+}
+.truth-add-button {
+    float: left;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
     font-size: 16px;
+    border: 1px dashed $border-color;
+    text-align: center;
+    color: $text-color-alive;
     cursor: pointer;
 }
-.add-button:hover {
-    color: $text-color
+.truth-add-button:hover {
+    color: $text-color;
+}
+
+.truth-input-active {
+    width:50px;
 }
 
 .tooltip {
@@ -177,38 +155,44 @@
     color: $text-danger !important;
 }
 
-.truth-edit {
+.truth-expression {
     float: left;
-    font-size: 12px;
-    margin-top: -60px;
-    margin-left: 28px;
-    cursor: pointer;
+    width: auto;
+    height: auto;
+    max-height: calc(100% - 20px);
+    overflow-y: auto;
+    padding-left: 20px;
 }
 
-.truth-edit:hover {
-    color: $edit-color;
+.truth-expression-section {
+    height: auto;
 }
 
-
-// The expression executer interface 
-
-.truth-expression-header {
-    float: left;
+.truth-expression-label {
     width: 100%;
-    height: 50px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
     font-weight: bold;
-    line-height: 50px;
-    font-size: 14px; 
 }
 
-.truth-expression-body {
-    float: left;
+.truth-expression-value {
     width: 100%;
-    height: calc(100 - 50px);
+    height: auto;
+    line-height: 30px;
+    font-size: 12px;
 }
-.truth-expression-final {
+
+.truth-expression-mc-kluskey-fragment {
+    width: 100%;
+    height: 25px;
+}
+.truth-expression-mc-kluskey-fragment-values {
+    width: auto;
+    height: 25px;
+}
+
+.truth-final-result {
     float: left;
     width: 100%;
-    min-height: 50px;
-    font-size: 14px; 
 }
