--- a/interface/src/app/home/home.component.scss
+++ b/interface/src/app/home/home.component.scss
@@ -6,8 +6,8 @@
     padding-left: 0px;
     overflow-y: auto;
     float: left;
-    width: calc(100% - 305px);
-    height: calc(100% - 185px);
+    width: 100%;
+    height: 100%;
 }
 
 .home-text {
@@ -30,7 +30,7 @@
     float: left;
     width: 150px;
     height: 150px;
-    margin-left: calc(50vw - 330px);
+    margin-left: calc(50% - 75px);
     cursor: pointer;
     background: $item-color;
     border-radius: 4px;
