--- a/interface/src/app/truth/truth.home/truth.home.component.html
+++ b/interface/src/app/truth/truth.home/truth.home.component.html
@@ -1,4 +1,4 @@
-<div class = "truth-options">
+<div class = "truth-home">
   <div class = "card" (click) = "selecionado( 'table' )" style = "border-right:1px solid rgba(255, 255, 255, 0.8);">  
     <div class = "card-header">
       <span class = "fa fa-tasks"></span>
