--- a/interface/src/app/truth/truth.home/truth.home.component.scss
+++ b/interface/src/app/truth/truth.home/truth.home.component.scss
@@ -1,20 +1,16 @@
 @import "../truth.component.scss";
-
-.truth-options {
+.truth-home {
     float: left;
-    margin-left: calc(50% - 400px);
-    margin-top: calc(50% - 650px);
-    width: 500px;
-    height: 300px;
+    position: relative;
+    height: 410px;
+    width: 410px;
+    margin-top: calc( 50% - 205px );
+    margin-left: calc( 50% - 205px );
 }
 .card {
     float: left;
     width: 200px;
     height: 200px;
-    margin-left: 10px;
-    margin-right: 10px;
-    padding-top: 30px;
-    padding-bottom: 30px;
     cursor: pointer;
 }
 .card:hover {
