--- a/interface/src/app/truth/truth.table/truth.table.component.scss
+++ b/interface/src/app/truth/truth.table/truth.table.component.scss
@@ -1,15 +1,33 @@
 @import "../truth.component.scss";
 
-.truth-table {
+.truth-body {
     float: left;
-    width: auto;
-    height: calc(100% - 20px);
-    max-height: calc(100% - 20px);
-    overflow-y: auto;
-    overflow-x: hidden;
-    padding-right: 10px;
+    width: 500px;
+    height: 100px;
+}
+.truth-final-result {
+    float: left;
+    min-height: 25px;
+    width: 100px;
 }
 
+.truth-table {
+    float: left;
+    min-width: 100px;
+    max-width: 50%;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: auto;
+}
+.truth-expression {
+    float: left;
+    width: auto;
+    height: auto;
+    max-height: calc(100% - 20px);
+    overflow-y: auto;
+    padding-left: 20px;
+    padding-right: 10px;
+}
 .truth-table-header {
     position: fixed;
     width: auto;
@@ -156,17 +174,6 @@
 .truth-remove:hover {
     color: $text-danger !important;
 }
-
-.truth-expression {
-    float: left;
-    width: auto;
-    height: auto;
-    max-height: calc(100% - 20px);
-    overflow-y: auto;
-    padding-left: 20px;
-    padding-right: 10px;
-}
-
 .truth-expression-section {
     height: auto;
 }
@@ -228,10 +235,6 @@
     line-height: 20px;
     border-right: 1px solid $text-color-label;
     word-wrap: break-word;
-}
-.truth-final-result {
-    float: left;
-    width: 100%;
 }
 
 .truth-compiler {
