--- a/interface/src/app/truth/truth.component.scss
+++ b/interface/src/app/truth/truth.component.scss
@@ -9,10 +9,10 @@
 }
 .truth-container {
     float: left;
-    width: calc( 100% - 50px);
-    min-height: calc( 100% - 100px);
+    width: calc( 100% - 70px);
+    height: calc( 100% - 100px);
     padding-left: 40px;
-    padding-right: 100px;
+    padding-right: 20px;
 }
 
 .truth-option-right {
