--- a/interface/src/app/truth/truth.home/truth.home.component.scss
+++ b/interface/src/app/truth/truth.home/truth.home.component.scss
@@ -4,8 +4,8 @@
     position: relative;
     height: 410px;
     width: 410px;
-    margin-top: calc( 50% - 205px );
-    margin-left: calc( 50% - 205px );
+    padding-top: calc( 50vh - 205px );
+    padding-left: calc( 50vw - 440px );
 }
 .card {
     float: left;
