--- a/interface/src/app/home/home.component.scss
+++ b/interface/src/app/home/home.component.scss
@@ -2,18 +2,16 @@
 
 .home {
     float: left;
-    padding-top: 70px;
-    padding-left: 0px;
     overflow-y: auto;
-    float: left;
-    width: 100%;
+    width: calc(100% - 20px);
     height: 100%;
+    padding-right: 10px;
 }
 
 .home-text {
     float: left;
     width: 100%;
-    min-height: 100px;
+    height: auto;
     font-size: 18px;
     color: $text-color;
     font-family: Verdana, Helvetica;
