--- a/interface/src/app/nav.bar/nav.bar.component.scss
+++ b/interface/src/app/nav.bar/nav.bar.component.scss
@@ -2,8 +2,9 @@
 
 .nav-bar {
     float: left;
-    width: 100%;
-    height: 60px;
+    width: $nav-bar-size-width;
+    min-height: $nav-bar-size-height;
+    height: auto;
     background: $nav-bar-background;
     box-shadow: 0px 0px 7px 2px $nav-bar-boxshadow;
 }
