--- a/interface/src/app/side.bar/side.bar.component.html
+++ b/interface/src/app/side.bar/side.bar.component.html
@@ -1,8 +1,8 @@
 <div class = "side-bar">
-  <div [ngClass] = "active === 'home'  ? 'side-bar-option side-bar-option-active' : 'side-bar-option'" routerLink = "/home">
-    <span class = "fa fa-home side-bar-span"></span> HOME
+  <div title="Home" [ngClass] = "active === 'home'  ? 'side-bar-option side-bar-option-active' : 'side-bar-option'" routerLink = "/home">
+    <span class = "fa fa-home side-bar-span"></span> <span class = "side-bar-option-name">HOME</span>
   </div>
-  <div [ngClass] = "active === 'truth' ? 'side-bar-option side-bar-option-active' : 'side-bar-option'" routerLink = "/truth">
-    <span class = "fa fa-microchip side-bar-span"></span> TRUTH
+  <div title="Truth" [ngClass] = "active === 'truth' ? 'side-bar-option side-bar-option-active' : 'side-bar-option'" routerLink = "/truth">
+    <span class = "fa fa-microchip side-bar-span"></span> <span class = "side-bar-option-name">TRUTH</span> 
   </div>
 </div>
