--- a/interface/src/app/truth/truth.table/truth.table.component.scss
+++ b/interface/src/app/truth/truth.table/truth.table.component.scss
@@ -2,34 +2,53 @@
 
 .truth-body {
     float: left;
-    width: 500px;
-    height: 100px;
+    width: 100%;
+    height: calc( 100vh - 200px);
 }
 .truth-final-result {
     float: left;
-    min-height: 25px;
-    width: 100px;
+    width: 100%;
+    padding-top: 10px;
+    height: 50px;
+    overflow: auto;
 }
 
-.truth-table {
-    float: left;
-    min-width: 100px;
-    max-width: 50%;
-    height: 100%;
-    overflow-y: auto;
-    overflow-x: auto;
+@media( max-width: 999px) {
+    .truth-table {
+        float: left;
+        width: 100vw;
+        height: auto;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
+    .truth-table {
+        float: left;
+        width: 100vw;
+        height: auto;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
 }
-.truth-expression {
-    float: left;
-    width: auto;
-    height: auto;
-    max-height: calc(100% - 20px);
-    overflow-y: auto;
-    padding-left: 20px;
-    padding-right: 10px;
+
+@media( min-width: 1000px) {
+    .truth-table {
+        float: left;
+        width: auto;
+        height: 100%;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
+    .truth-expression {
+        float: left;
+        width: auto;
+        height: 100%;
+        overflow-y: auto;
+        overflow-x: auto;
+    }
 }
 .truth-table-header {
-    position: fixed;
+    margin: auto;
+    position: absolute;
     width: auto;
     height: 53px;
 }
@@ -175,6 +194,7 @@
     color: $text-danger !important;
 }
 .truth-expression-section {
+    padding: 10px;
     height: auto;
 }
 
