--- a/interface/src/styles.scss
+++ b/interface/src/styles.scss
@@ -7,6 +7,8 @@ body, html {
     height: 100%;
     width: 100%;
     min-width: 500px;
+    min-height: 500px;
+    overflow-y: auto
 }
 
 @font-face {
