Now, the application is relative then, the application can be used in smartphones. The min width is 500px.

--- a/interface/src/app/truth/truth.table/truth.table.component.html
+++ b/interface/src/app/truth/truth.table/truth.table.component.html
@@ -1,50 +1,44 @@
 <div class = "truth-body">
   <div class = "truth-table">
-    <div class = "truth-table-header">
-      <div class = "truth-table-header-variable-name" *ngFor = "let variable of variables; let i = index">
-        <input #in class = "truth-input truth-input-active" type = "text" [value] = "variable.name" [readonly] = "!editing" (click) = "canEdit()" (focusout) = "editEnd($event, i)">
-        <span *ngIf = "variables.length > 1" class = "tooltip fa fa-trash truth-remove" (click) = "removeVariable(i)">
-          <span class = "tooltiptext truth-tooltip" style = "margin-top: -10px"> remove </span>
-        </span>
-      </div>
-      <div class = "truth-table-header-variable-name">
-        {{ result.name }}
-      </div>
-      <div class = "truth-option">
-        <div class = "truth-add-input" *ngIf = "newVariable">
-          <input #in class = "truth-input" type = "text" placeholder = "new var" (focusout)="haveNewVariable(in.value.trim())" (keyup.enter)="haveNewVariable(in.value.trim())" autofocus> 
+      <div class = "truth-table-header">
+        <div class = "truth-table-header-variable-name" *ngFor = "let variable of variables; let i = index">
+          <input #in class = "truth-input truth-input-active" type = "text" [value] = "variable.name" [readonly] = "!editing" (click) = "canEdit()" (focusout) = "editEnd($event, i)">
+          <span *ngIf = "variables.length > 1" class = "fa fa-trash truth-remove" (click) = "removeVariable(i)">
+          </span>
         </div>
-        <div class = "tooltip truth-add-button">
-          <div *ngIf = "!newVariable" (click) = "addVariable()">
-            <span class = "fa fa-plus"></span>
-            <span class = "tooltiptext truth-tooltip"> add variable </span>
+        <div class = "truth-table-header-variable-name">
+          {{ result.name }}
+        </div>
+        <div class = "truth-option">
+          <div class = "truth-add-input" *ngIf = "newVariable">
+            <input #in class = "truth-input" type = "text" placeholder = "new var" (focusout)="haveNewVariable(in.value.trim())" (keyup.enter)="haveNewVariable(in.value.trim())" autofocus> 
           </div>
-          <div *ngIf = "newVariable" (click) = "newVariable = false">
-            <span class = "fa fa-close"></span>
-            <span class = "tooltiptext truth-tooltip"> cancel </span>
+          <div class = "tooltip truth-add-button">
+            <div *ngIf = "!newVariable" (click) = "addVariable()">
+              <span class = "fa fa-plus"></span>
+            </div>
+            <div *ngIf = "newVariable" (click) = "newVariable = false">
+              <span class = "fa fa-close"></span>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class = "truth-table-body">
-      <div class = "truth-table-values" *ngFor = "let variable of variables; let i = index">
-        <div class = "truth-table-value" *ngFor = "let line of variable.lines">
-          <div class = "truth-table-value-line">
-            {{ line }}
+      <div class = "truth-table-body">
+        <div class = "truth-table-values"  *ngFor = "let variable of variables;">
+          <div class = "truth-table-value" *ngFor = "let line of variable.lines">
+            <div class = "truth-table-value-line">
+              {{ line }}
+            </div>
+          </div>
+        </div>
+        <div class = "truth-table-values">
+          <div class = "truth-table-value" *ngFor = "let line of result.lines | async;">
+            <div class = "truth-table-value-line">
+              <input class = "truth-input truth-input-header" type = "text"  [value] = "line.number" (keyup.enter)="resultEdit($event, line)" (focusout) = "resultEdit($event, line)">
+            </div>
           </div>
         </div>
       </div>
-      <div class = "truth-table-values" style = "width: 200px;">
-        <div class = "truth-table-value" style = "width: 200px;" *ngFor = "let line of result.lines | async;">
-          <div class = "truth-table-value-line">
-            <input class = "truth-input truth-input-header" type = "text"  [value] = "line.number" (keyup.enter)="resultEdit($event, line)" (focusout) = "resultEdit($event, line)">
-          </div>
-          <div class = "truth-table-value-line-expression" *ngIf = "line.expression != ''">
-            <span class = "fa fa-chevron-right" style = "font-size: 12px;"></span>  {{ line.expression }}
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   <div class= "truth-expression" *ngIf = "expression$.getValue()">
     <div class = "truth-expression-section">
@@ -83,7 +77,7 @@
       <button (click) = "executeMcCluskey()">Evaluate</button>
     </div>
   </div>
-</div>
-<div class = "truth-final-result" *ngIf = "mcCluskeyResolved">
-  <span class = "truth-final-method-name">MC-CLUSKEY </span><span class = "truth-final-result-text">RESULT </span><span class = "fa fa-chevron-right truth-final-result-text" style = "font-size: 12px;"></span> {{ mcCluskeyResolved.simplified }}
+  <div class = "truth-final-result" *ngIf = "mcCluskeyResolved">
+    <span class = "truth-final-method-name">MC-CLUSKEY </span><span class = "truth-final-result-text">RESULT </span><span class = "fa fa-chevron-right truth-final-result-text" style = "font-size: 12px;"></span> {{ mcCluskeyResolved.simplified }}
+  </div>
 </div>
